 * Racer: Fix racer ghost not getting reset after a skip
 * King Mode: Fix team sometimes not being killed properly if king drowned
 * King Mode: Kill resurrected minions if king is not alive

Controls:
 + Add control to unselect current weapon (no key chosen by default)
 + Allow to leave a control unused
 + New chat command: “/help room” (shows room chat commands within the game)

Graphics:
 * Fix double water splash when flying saucer drowns

Game HUD:
 + Colorize switching arrows, pointing arrow and target cross in clan color
 + Skip ammo menu animation when playing with turn time of 10s or less
 + Don't show crate spawn message for initial crates in missions
 + Display player name of own teams in online games
 * Fix last 2 characters in demo chat being missing
 * Hide most HUD elements in cinematic mode
 * Don't show "F1", "F2", etc. in ammo menu if these aren't the actual slot keys
 * Fix wind bar animation not looping properly
 * Suppress “<team> is gone.” message at end of game

Frontend:
 + Restructure credits
 + Credits screen in main menu is now translatable
 * Fix force-locked schemes getting unlocked when changing map types

Lua API:
 + New call: SaveMissionVar(varname, value): Save value to mission variable (variable for non-campaign mission)
 + New call: GetMissionVar(varname): Get value of mission variable
 + New call: SetTurnTimePaused(isPaused): Call with true to pause turn time, false to unpause
 + New call: GetTurnTimePaused(): Returns true if turn time is paused due to Lua
 + New call: AddMissionTeam(color): Add mission team, i.e. the team selected by player in campaign/mission page
 + New call: AddMissionHog(health): Add a hedgehog for the mission team
 + New return value: AddTeam/AddMissionTeam return <real team name>, <team index>
 + Utils library: New calls: getReadableChallengeRecord, updateChallengeRecord
 + New callback: onGameResult(winningClan): Called when the game ends normally. winningClan = index of winning clan or -1 on draw